--- a/SpringBootWebSocketApplication001/src/main/resources/templates/employee9.html
+++ b/SpringBootWebSocketApplication001/src/main/resources/templates/employee9.html
@@ -41,7 +41,7 @@
             <table id="conversation" class="table table-striped">
                 <thead>
                 <tr>
-                    <th>Greetings</th>
+                    <th>Data</th>
                 </tr>
                 </thead>
                 <tbody id="greetings">
@@ -68,7 +68,7 @@
 </div>
 <script>
 const stompClient = new StompJs.Client({
-brokerURL: 'ws://localhost:9098/gs-guide-websocket'
+    brokerURL: 'ws://localhost:9098/gs-guide-websocket'
 });
 //2nd function call
 // stompClient.onConnect = (frame) => {
@@ -93,12 +93,12 @@ console.log("Subscribed to dynamic URL /topic/greeting/($id)");
 };
 
 stompClient.onWebSocketError = (error) => {
-console.log("stompClient.onWebSocketError");
+console.log("stompClient.onWebSocketError called of employee");
 console.error('Error with websocket', error);
 };
 
 stompClient.onStompError = (frame) => {
-console.log("stompClient.onStompError called")
+console.log("stompClient.onStompError called of employee" )
 console.error('Broker reported error: ' + frame.headers['message']);
 console.error('Additional details: ' + frame.body);
 };
@@ -118,12 +118,12 @@ $("#dataStructure").html("")
 }
 //first function call
 function connect() {
-console.log("function connect() called inside that -> stompClient.activate() called ");
+console.log("function connect() called of employee inside that -> stompClient.activate() called ");
 stompClient.activate();
 }
 
 function disconnect() {
-console.log("function disconnect called -> stompClient.deactivate() called ");
+console.log("function disconnect called of employee -> stompClient.deactivate() called ");
 
 stompClient.deactivate();
 setConnected(false);
@@ -140,10 +140,65 @@ console.log("Disconnected");
 //     });
 // }
 function sendName() {
-    var name = $("#name").val(); // Get the value from the name input field
-    var eid = $("#eid").val(); // Get the value from the eid input field
-console.log("function sendName() called ->  ");
+    console.log("function sendName() called  of employee ->  ");
+
+    let name = $("#name").val(); // Get the value from the name input field
+    let eid = $("#eid").val(); // Get the value from the eid input field
+    let status = "pending";
     stompClient.subscribe('/topic/greeting/'+eid, (greeting) => {
+        console.log(" subscribe method called of employee -> /topic/greeting/{id} called");
+        // console.log("The value of greeting is :"+greeting);
+        // console.log("The value of greeting.body is"+greeting.body);
+        // console.log("The value of JSON.parse(greeting.body).content is"+JSON.parse(greeting.body).content);
+        // console.log("The value of JSON.parse(greeting.body) is"+JSON.parse(greeting.body));
+        // console.log("The value of JSON.parse(greeting).content is"+JSON.parse(greeting).content); //error
+        // console.log("The value of JSON.parse(greeting) is"+JSON.parse(greeting)); //error
+
+
+
+        const messageContent1 = JSON.parse(greeting.body).content;
+        // const id = messageContent1.id;
+        // const name = messageContent1.name;
+        // const status = messageContent1.status;
+
+        // const messageContent1 = JSON.parse(greeting.body).content;
+        const messageContent2 = JSON.parse(greeting.body).content;
+        const splitOutput = messageContent2.split("&&&&&");
+
+        console.log(splitOutput);
+        let status = splitOutput[2];
+        // console.log("Bro !!!!! .The status is :"+status)
+
+
+        // console.log("parsed content from hr to employee :"+messageContent1);
+        // console.log("The id is :"+id+",Name:"+name+",status:"+status);
+
+        // console.log("mandalji subscribe(greeting) called .");
+        // console.log("The value of greeting is :"+greeting);
+        let name1 =  $("#name").val();
+        let eid1  =$("#id").val();
+        let status1 = $("#status").val();
+
+        // console.log("2name :"+name1+",id2:"+eid1+",status2:"+status1);
+        // console.log("name :"+name+",id:"+eid+",status:"+status);
+        // console.log("ajax called >>>.../feedData")
+
+
+if (status==='pending'){
+        $.ajax({
+            url: '/feedData', // Replace this with your actual endpoint for updating the status
+            type: 'POST', // or 'PUT', 'PATCH', depending on your server's requirements
+            data: { id: eid, name:name,status: status },
+        success: function(response) {
+                console.log("data updated successfully in the database");
+        },
+        error: function(xhr, status, error) {
+            // If database update fails, display an alert message
+            alert("Failed to update status. Please try again later.");
+        }
+    });}
+
+
 // Extract the ID from the subscribed destination
 // const id = greeting.headers.destination.split('/').pop();
         const messageContent = JSON.parse(greeting.body).content;
@@ -154,41 +209,56 @@ console.log("function sendName() called ->  ");
 
 
 
+
+
+
+
 // Construct the dynamic destination URL using the form values
 var destinationUrl = "/app/hello";
 
 console.log("stompClient.publish() called with destination '" + destinationUrl + "' and etc");
 stompClient.publish({
 destination: destinationUrl,
-body: JSON.stringify({'name': name, 'id': eid})
+body: JSON.stringify({'name': name, 'id': eid,'status':'pending'})
 });
     stompClient.publish({
         destination: "/app/hello2/"+eid,
-        body: JSON.stringify({'name': name, 'id': eid})
+        body: JSON.stringify({'name': name, 'id': eid ,'status':'pending'})
     });
 }
 
 //5th function call
 
 function showGreeting(message) {
-console.log("showGreeting() called and kritik changed some data");
+    console.log("function show greeting called of employee");
+
+    var arr = message.split("&&&&&");
+    var id = arr[0];
+    var name = arr[1];
+    var status = arr[2];
+    // console.log("The id got is:"+id)
+    // console.log("name is :"+name)
+    // console.log("status is :"+status)
+// console.log("showGreeting() called and kritik changed some data");
 // Check if message is not null or undefined
 // if (message && message.id && message.name) {
-$("#dataStructure").html("<tr><td>" + message +" 'Hii from JS' "  + "</td></tr>"+"<tr><td></td></tr>")
-$("#greetings").html("<tr><td>" + message + " 'Hii from JS' " + "</td></tr>" + "<tr><td></td></tr>");
+$("#dataStructure").html("<tr><td>" + status +" '' "  + "</td></tr>"+"<tr><td></td></tr>")
+// $("#greetings").html("<tr><td>"'id:'"+id+"',name:' + message+ "  " + "</td></tr>" + "<tr><td></td></tr>");
+    $("#greetings").html("<tr><td>id: " + id + ", name: " + name + "</td></tr><tr><td></td></tr>");
+
 // }else{
 // console.error("Invalid message object:", message);
 //
 // }
-    console.log(message);
+    console.log("Message is :"+message);
 
 }
 function showGreetings(id, messageContent) {
-console.log("showGreeting() called");
+console.log("showGreetings() called of  employee");
 // Your logic to handle the greeting message
-console.log("Received greeting for ID: " + id + ", Content: " + messageContent);
+// console.log("Received greeting for ID: " + id + ", Content: " + messageContent);
 // Update your UI or perform other actions as needed
-console.log("showGreeting() called and kritik changed some data");
+// console.log("showGreeting() called and kritik changed some data");
 //check if message is not null or undefined
 // if (messageContent && messageContent.id && messageContent.name) {
 // $("#dataStructure").html("<tr><td>" + messageContent +" 'Hii from JS' "  + "</td></tr>"+"<tr><td></td></tr>")
